# rusty-bluepill

./: Cargo.toml  README.md  setup.sh
.cargo/: config
debug/: bluepill-debug.cfg
